[gd_scene load_steps=7 format=2]

[ext_resource path="res://Interface/HUD.gd" type="Script" id=1]

[sub_resource type="GradientTexture2D" id=1]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 1 )
colors = PoolColorArray( 0.300781, 0.0641667, 0.0641667, 1 )

[sub_resource type="GradientTexture2D" id=3]
gradient = SubResource( 2 )
fill_from = Vector2( 0.00833333, 0 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 1 )
colors = PoolColorArray( 1, 1, 1, 1 )

[sub_resource type="GradientTexture2D" id=5]
gradient = SubResource( 4 )
height = 30
fill_from = Vector2( 1, 0 )
fill_to = Vector2( 0, 0 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -319.0
margin_top = -359.0
margin_right = -319.0
margin_bottom = -359.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 9.0
margin_top = 12.0
margin_right = 76.0
margin_bottom = 25.0
texture = SubResource( 1 )
expand = true
stretch_mode = 1

[node name="HealthBarUnder" type="TextureProgress" parent="."]
margin_left = 11.0
margin_top = 14.0
margin_right = 51.0
margin_bottom = 72.0
rect_scale = Vector2( 1.56458, 0.151772 )
value = 100.0
texture_under = SubResource( 3 )
texture_progress = SubResource( 5 )
tint_progress = Color( 1, 1, 0, 1 )
nine_patch_stretch = true

[node name="HealthBarOver" type="TextureProgress" parent="."]
margin_left = 11.0
margin_top = 14.0
margin_right = 51.0
margin_bottom = 71.0
rect_scale = Vector2( 1.56458, 0.151772 )
value = 50.0
texture_under = SubResource( 3 )
texture_progress = SubResource( 5 )
tint_under = Color( 1, 1, 1, 0 )
tint_progress = Color( 0, 1, 0, 1 )
nine_patch_stretch = true

[node name="UpdateTween" type="Tween" parent="."]
